syntax = "proto3";

import "google/protobuf/any.proto";

option java_package = "cn.jisol.ngame.demo.proto.sync";

message DSyncInfos {
    int32 index = 1; //帧索引
    repeated google.protobuf.Any message = 2; //帧操作列表
}

